<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_common_diagnostics</name>
  <version>0.0.0</version>
  <description>Common microcontroller-specific diagnostics and monitors.</description>
  <maintainer email="arne.nordmann@de.bosch.com">Arne Nordmann</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcutils</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rclc</build_depend>

  <depend>micro_ros_diagnostic_msgs</depend>
  <depend>micro_ros_diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
