<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_diagnostic_bridge</name>
  <version>0.3.0</version>
  <description>Translates micro-ROS diagnostic messages to vanilla ROS 2 diagnostic messages.</description>
  <maintainer email="bjv@capra.ooo">Bartolome Jimenez Vera</maintainer>

  <license>Apache License 2.0</license>

  <author email="arne.nordmann@de.bosch.com">Arne Nordmann</author>
  <author email="bjv@capra.ooo">Bartolome Jimenez Vera</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>micro_ros_diagnostic_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>diagnostic_msgs</test_depend>
  <test_depend>micro_ros_diagnostic_msgs</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>ros_environment</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
