<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_diagnostic_msgs</name>
  <version>0.3.0</version>
  <description>Ccontains messages and service definitions for micro-ROS diagnostics.</description>
  <maintainer email="bjv@capra.ooo">Bartolome Jimenez Vera</maintainer>

  <license>Apache License 2.0</license>

  <author email="arne.nordmann@de.bosch.com">Arne Nordmann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
