<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_diagnostic_updater</name>
  <version>0.1.0</version>
  <description>rclc convenience methods for diagnostic updaters.</description>
  <maintainer email="arne.nordmann@de.bosch.com">Arne Nordmann</maintainer>

  <license>Apache License 2.0</license>

  <author email="arne.nordmann@de.bosch.com">Arne Nordmann</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclc</depend>
  <depend>micro_ros_diagnostic_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>
  <test_depend>micro_ros_diagnostic_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
